#! /usr/bin/env bash
#########################################################################
#									#
# Script ID: com-lib/src/prg/bash/Makefile.am				#
# Author: Copyright (C) 2017-2018  Mark Grant				#
#									#
# Released under the GPLv3 only.					#
# SPDX-License-Identifier: GPL-3.0					#
#									#
# Purpose:								#
#	AutoMake script file to generate swoc.conf setup scripts from	#
# source.								#
#									#
#########################################################################

#########################################################################
#									#
# Changelog								#
#									#
# Date		Author	Version	Description				#
#									#
# 03/10/2017	MG	1.0.0	First release.				#
# 12/01/2018	MG	1.0.1	Add SPDX license tags to source files.	#
# 22/06/2018	MG	1.0.2	Build setup.sh in AC_CONFIG_FILES.	#
#									#
#########################################################################


pkglibexec_SCRIPTS = setup.sh

CLEANFILES = *.tmp setup.sh
