#! /usr/bin/env bash
#########################################################################
#									#
# Script ID: srv-prg/source/progs/c/inc/Makefile.am			#
# Author: Copyright (C) 2016-2018  Mark Grant				#
#									#
# Released under the GPLv3 only.					#
# SPDX-License-Identifier: GPL-3.0					#
#									#
# Purpose:								#
#	AutoMake script file to generate swocserver headers from	#
# source.								#
#									#
#########################################################################

#########################################################################
#									#
# Changelog								#
#									#
# Date		Author	Version	Description				#
#									#
# 10/05/2016	MG	1.0.1	First release.				#
# 15/11/2016	MG	1.1.0	Add support for swocserverd changes.	#
# 12/01/2018	MG	1.1.1	Add SPDX license tags to source files.	#
#									#
#########################################################################

noinst_HEADERS = cmdlineargs.h signalhandle.h
noinst_HEADERS += swocserver.h swocserverd.h
