#! /usr/bin/env bash
#########################################################################
#									#
# Script ID: .cli-prg/source/progs/c/inc/Makefile.am			#
# Author: Copyright (C) 2016-2018  Mark Grant				#
#									#
# Released under the GPLv3 only.					#
# SPDX-License-Identifier: GPL-3.0					#
#									#
# Purpose:								#
#	AutoMake script file to generate swocclient headers from	#
# source.								#
#									#
#########################################################################

#########################################################################
#									#
# Changelog								#
#									#
# Date		Author	Version	Description				#
#									#
# 09/05/2016	MG	1.0.1	First release.				#
# 12/01/2018	MG	1.0.2	Add SPDX license tags to source files.	#
#									#
#########################################################################

noinst_HEADERS = swocclient.h cmdlineargs.h signalhandle.h
