#########################################################################
#									#
# Author: Copyright (C) 2017-2019, 2021, 2023  Mark Grant		#
#									#
# Released under the GPLv3 only.					#
# SPDX-License-Identifier: GPL-3.0-only					#
#									#
# Purpose:								#
# AutoMake script file to install swoc server & client common		#
# configuration file.							#
#									#
#########################################################################


confdir = $(sysconfdir)

conf_DATA = swoc.conf

CLEANFILES = *.tmp swoc.conf

