#########################################################################
#									#
# Script ID: src/conf/etc/srv-prg/Makefile.am				#
# Author: Copyright (C) 2017-2019, 2021  Mark Grant			#
#									#
# Released under the GPLv3 only.					#
# SPDX-License-Identifier: GPL-3.0-only					#
#									#
# Purpose:								#
# AutoMake script file to install swocserverd configuration files.	#
#									#
#########################################################################

#########################################################################
#									#
# Changelog								#
#									#
# Date		Author	Version	Description				#
#									#
# 19/05/2017	MG	1.0.0	Initial release.			#
# 12/01/2018	MG	1.0.1	Add SPDX license tags to source files.	#
# 23/06/2018	MG	1.0.2	Build swocserverd.conf in		#
#				AC_CONFIG_FILES.			#
# 19/05/2019	MG	1.0.3	Merge sub-projects into one.		#
#				Remove shebang.				#
# 07/12/2021	MG	1.0.4	Tighten SPDX tag.			#
#									#
#########################################################################


confdir = $(sysconfdir)

conf_DATA = swocserverd.conf

CLEANFILES = *.tmp swocserverd.conf

