#########################################################################
#									#
# Author: Copyright (C) 2017-2019, 2021, 2023  Mark Grant		#
#									#
# Released under the GPLv3 only.					#
# SPDX-License-Identifier: GPL-3.0-only					#
#									#
# Purpose:								#
# AutoMake script file to install swocserverd configuration files.	#
#									#
#########################################################################


confdir = $(sysconfdir)

conf_DATA = swocserverd.conf

CLEANFILES = *.tmp swocserverd.conf

